After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664564 - Doesn't handle TP_DELIVERY_STATUS_PERMANENTLY_FAILED
Doesn't handle TP_DELIVERY_STATUS_PERMANENTLY_FAILED
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Chat
2.33.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-11-22 14:33 UTC by Guillaume Desmottes
Modified: 2011-11-28 13:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
don't ignore TP_DELIVERY_STATUS_TEMPORARILY_FAILED delivery report (1.09 KB, patch)
2011-11-22 14:43 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2011-11-22 14:33:19 UTC
See bug #663001 the spinner keeps spinning and no error message is displayed.
Comment 1 Guillaume Desmottes 2011-11-22 14:43:23 UTC
Created attachment 201927 [details] [review]
don't ignore TP_DELIVERY_STATUS_TEMPORARILY_FAILED delivery report

We should display an error message as well if not the user will assume the
message has been sent and the spinner keeps spinning.
Comment 2 Danielle Madeley 2011-11-28 11:43:49 UTC
Review of attachment 201927 [details] [review]:

++

Aah, I had assumed a temporary failure would be followed by something else, that it was not the end of the state diagram. Perhaps we should clarify this in the spec.
Comment 3 Guillaume Desmottes 2011-11-28 13:14:23 UTC
Attachment 201927 [details] pushed as 09a20a5 - don't ignore TP_DELIVERY_STATUS_TEMPORARILY_FAILED delivery report
Comment 4 Guillaume Desmottes 2011-11-28 13:15:33 UTC
I merged to 3.2 as well.