don't ignore TP_DELIVERY_STATUS_TEMPORARILY_FAILED delivery report

We should display an error message as well if not the user will assume the
message has been sent and the spinner keeps spinning.

https://bugzilla.gnome.org/show_bug.cgi?id=664564